--- a/templates/base.html
+++ b/templates/base.html
@@ -56,7 +56,7 @@
         </a>
       </div>
       <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-        <form method="GET" action="#">
+        <form method="GET" action="{% url 'products' %}">
           <!-- width 100, input group from bootstrap contains fontawesome search icon -->
           <div class="input-group w-100">
             <!-- q for query -->
