--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -14,7 +14,7 @@
 <div class="container-fluid">
     <div class="row">
         <!-- Offset pushes to the center of the screen -->
-        <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
+        <div class="col-12 col-md-6 offset-md-2">
             <div class="image-container my-5">
                 {% if product.image %}
                 <a href="{{ product.image.url }}" target="_blank" aria-label="product image opens in a new window">
@@ -26,7 +26,7 @@
                 </a>
                 {% endif %}
             </div>
-            <div class="col-12 col-md-6 col-lg-4">
+            <div class="col-12">
                 <div class="product-details-container mb-5 mt-md-5">
                     <p class="mb-0">{{ product.name }}</p>
                     <p class="lead mb-0 text-left font-weight-bold">${{ product.price }}</p>
