--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -27,7 +27,7 @@
     <div class="row">
         <div class="product-container col-10 offset-1">
             <div class="row mt-1 mb-2">
-                <div class="col-12 col-md-6 my-auto order-md-last d-flex justify-content-center"> <!-- justify-content-md-end -->
+                <div class="col-12 col-md-6 my-auto d-flex justify-content-center"> <!--order-md-last  justify-content-md-end -->
                     <div class="sort-select-wrapper w-50">
                         <select id="sort-selector"
                             class="custom-select custom-select-sm rounded-0 border border-{% if current_sorting != 'None_None' %}info{% else %}black{% endif %}">
@@ -128,10 +128,22 @@
         </div>
     </div>
 </div>
+<div class="btt-button shadow-sm rounded-0 border border-black">
+    <a class="btt-link d-flex h-100">
+        <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
+    </a>	
+</div>
 {% endblock %}
 
 {% block postloadjs %}
 {{ block.super }}
+
+<script type="text/javascript">
+    $('.btt-link').click(function(e) {
+        window.scrollTo(0,0)
+    })
+</script>
+
 <script type="text/javascript">
     $('#sort-selector').change(function() {
         var selector = $(this);
