--- a/static/css/base.css
+++ b/static/css/base.css
@@ -75,6 +75,19 @@ a.category-badge > span.badge:hover {
     color: #fff !important;
 }
 
+/* Fixes button position on page so it's always visible */
+.btt-button {
+    height: 42px;
+    width: 42px;
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+}
+
+.btt-link {
+    cursor: pointer;
+}
+
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
