--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -14,7 +14,7 @@
 <div class="container-fluid">
     <div class="row">
         <!-- Offset pushes to the center of the screen -->
-        <div class="col-12 col-md-6 offset-md-2">
+        <div class="col-12 col-md-6 col-lg-4 offset-md-2 offset-lg-3">
             <div class="image-container my-5">
                 {% if product.image %}
                 <a href="{{ product.image.url }}" target="_blank" aria-label="product image opens in a new window">
