--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
 <head>
   {% block meta %}
   <!-- Required meta tags -->
-  <meta http-equiv="X-UA-Compatible content=" ie=edge">
+  <meta http-equiv="X-UA-Compatible content="ie=edge">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   {% endblock %}
@@ -39,6 +39,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous">
   </script>
+  <script async src="https://js.stripe.com/v3/"></script>
   {% endblock %}
 
   {% block extra_js %}
